--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,21 @@ server {
 
     # SPA routing - fallback to index.html
     location / {
+        # Silently handle POST/PUT/DELETE by returning the SPA
+        # This prevents 405 errors from browser extensions or dev tools
+        if ($request_method = 'POST') {
+            return 200 '{"status":"ok"}';
+            add_header Content-Type application/json;
+        }
+        
+        # Handle OPTIONS for CORS preflight
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type';
+            return 204;
+        }
+        
         try_files $uri $uri/ /index.html;
     }
 
